Adding some alt text to my images

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 			<div id="main">
 				<article id="about">
 					<h2 class="major">About</h2>
-					<span class="image main"><img src="images/caleb-and-rex.jpg" alt="" /></span>
+					<span class="image main"><img src="images/caleb-and-rex.jpg" alt="A picture of me and some pictures of Rex" /></span>
 					<p>I've loved programming since I was a little kid, and since 2018 I've had the privilege of making it my full time job. I'm currently working remotely from Leeds, England, but I frequently travel down to London for my current role.</p>
 					<p>I also love <a href="https://www.youtube.com/watch?v=Kiq2vXOpKvM" target="_blank">Rex from Toy Story</a>.</p>
 				</article>
 
 				<article id="work">
 					<h2 class="major">Work</h2>
-					<span class="image main"><img src="images/caleb-presenting.jpg" alt="" /></span>
+					<span class="image main"><img src="images/caleb-presenting.jpg" alt="Two images of me presenting some work to my colleagues" /></span>
 					<p>I currently work as a Security Engineer at <a href="https://www.kurtgeiger.com" target="_blank">Kurt Geiger</a>. My role includes, but is not limited to:</p>
 					<ul>
 						<li>Application security for six websites</li>
