--- a/index.html
+++ b/index.html
@@ -71,10 +71,13 @@
 					</ul>
 				</article>
 			</div>
-				<footer id="footer">
-					<p class="copyright">&copy; Caleb Whittington</p>
-				</footer>
-			</div>
+			<footer id="footer">
+				<ul class="icons">
+					<li><a href="https://www.linkedin.com/in/calebwhitt" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+					<li><a href="https://twitter.com/Caleb_Whitt" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+				</ul>
+			</footer>
+		</div>
 		<div id="bg"></div>
 
 		<script src="assets/js/jquery.min.js"></script>
