Adding my CV to the website, replacing the "Contact" section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<ul>
 						<li><a href="#about">About</a></li>
 						<li><a href="#work">Work</a></li>
-						<li><a href="#contact">Contact</a></li>
+						<li><a href="https://dnv1tbgf3c4wf.cloudfront.net" target="_blank">CV</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -60,15 +60,6 @@
 						<li>Educating co-workers on security risks</li>
 					</ul>
 					<p>I started my career at Kurt Geiger four years ago as an Apprentice Test Engineer. Then I progressed to Junior Test Engineer before a promotion to my current role. I work closely with the DevOps, backend, frontend, IT and Business Intelligence teams. I frequently plan projects, execute them and look after them until complete maturity.</p>
-				</article>
-
-				<article id="contact">
-					<h2 class="major">Contact</h2>
-					<p>If you'd like to get in touch, fire me an email: <b><a href="mailto:calebwhitt@outlook.com">calebwhitt@outlook.com</a></b></p>
-					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/calebwhitt" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-						<li><a href="https://twitter.com/Caleb_Whitt" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					</ul>
 				</article>
 			</div>
 			<footer id="footer">
